Added css to change class names with JS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
 	<h1>hello js rocket</h1>
-	<a href="#" onclick="sayMyName('Molly');">Click Me!</a>
+	<a href="#" onclick="doCoolStuff();">Click Me!</a>
+	<div id="cool" class="cool">
+		<p>Hello I'm Cool</p>
+	</div>
+	<a href="#" onclick="changeOnClick();">CHANGE TEXT!</a>
+	<div id="change" class="changeText">
+			<p>Pretty Awesome Huh?</p>
+	</div>
 </body>
 </html>
 
